# SoftRender

./: CMakeLists.txt  README..md  README.md
models/brickwall/: brickwall_diffuse.tga  brickwall_nm_tangent.tga
output/: framebuffer.tga
source/: main.cpp
source/common/: Logger.cpp  Logger.h  cpplang.h
source/geometry/: geometry.cpp  geometry.h
source/model/: model.cpp  model.h  tgaimage.cpp  tgaimage.h
source/pipeline/: softgl.cpp  softgl.h
source/shader/: shader.cpp  shader.h
